--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,23 +1,30 @@
 
 /* Estilos del cuerpo */
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 body {
     font-family: Arial, sans-serif;
     line-height: 1;
-    background-color: #75a13c; /* Verde claro */
+    background: #a5ddbb;
+	background: -webkit-linear-gradient(to right, #97df75, #066b30);
+	background: linear-gradient(to right, #dcecd2, #0b9c48);
     margin: 0; 
     padding: 0; 
-    min-height: 100vh; /* Asegura que el body ocupe toda la altura del viewport */ 
+    min-height: 80vh; /* Asegura que el body ocupe toda la altura del viewport */ 
     display: flex; 
     flex-direction: column; 
+    position: relative;
+    padding-bottom: 3em;
 }
 
 
 /* Encabezado */
 header {
-    background-color: #0a770f; /* Verde oscuro */
+    background: #aff0c9;
+	background: -webkit-linear-gradient(to right, #184901, #57e752);
+	background: linear-gradient(to right, #42db63, #8cb19b);
     color: #f5f5f5;
-    padding: 2px;
-    text-align: center;
+    padding: 10px;
+    text-align:justify ;
 }
 header h1 {
     margin: 0;
@@ -29,6 +36,7 @@ main {
     max-height:"1000px";
     padding: 0rem;
     background: #ffffff00; /* Verde claro */
+    min-height: 81vh;
 }
 section {
     margin-bottom: 2rem;
@@ -45,9 +53,10 @@ h2, h3 {
     background: #2e7d32; /* Verde oscuro */
     color: #fff;
     text-decoration: none;
-    border-radius: 5px;
+    border-radius: 10px;
     box-shadow: 0 4px 6px rgb(68, 175, 91); /* Sombra */
     transition: box-shadow 0.3s ease;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .btn:hover {
@@ -60,9 +69,11 @@ footer {
     background: #2e7d32; /* Verde oscuro */
     color: #fff;
     text-align: center;
-    position: relative;
-    padding: 0px; 
-    height: 35px;
+    position: absolute;
+    padding: 1em 0; 
+    bottom: 0;
+    width: 100%;
+    
 }
 select {
     padding: 5px;
@@ -74,9 +85,9 @@ select {
 }
 
 label {
-    font-size: 3rem;
-    font-family: 'Times New Roman', Times, serif;
-    color: #1c291c; /* Verde oscuro */
+    font-size: 1.4rem;
+    font-family: 'Montserrat', Times, serif;
+    color: #000300; /* Verde oscuro */
     margin-right: 10px;
 }
 /* Navegación */
@@ -87,6 +98,7 @@ label {
             /*background-color: #3c7e2c;*/
             padding: 1rem;
             height: 5px;
+
         }
         .navbarit {
             display: flex;
@@ -106,11 +118,12 @@ label {
             margin: 0 1rem;
         }
         .navbar-menu a {
-            color: white;
+            color: rgb(0, 0, 0);
             text-decoration: none;
-            font-size: 1rem;
+            font-size: 1.5rem;
             padding: 0.5rem 1rem;
             transition: background-color 0.3s;
+            font-family: 'Montserrat', Times, serif;
         }
         .navbar-menu a:hover,
         .navbar-menu a.active {
@@ -129,7 +142,7 @@ nav ul li {
 }
 
 nav ul li a {
-    background-color: #0a770f;
+    /*background-color: #040a04;*/
     color: #29272e;
     text-decoration: rgb(33, 33, 163);
 }
@@ -170,3 +183,53 @@ nav ul li a {
                 float: left;
             }
         }
+        
+    .bloque-texto {
+      width: 80%;
+      margin: 20px auto;
+      padding: 20px;
+      background: #0a853d;
+	  background: -webkit-linear-gradient(to right, #29c49d, #4be923);
+	  background: linear-gradient(to right, #5ec0b0, #59f311);
+      border: 1px solid #2a5a03;
+      border-radius: 50px;
+      box-shadow: 2px 2px 5px rgba(189, 27, 27, 0.1);
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      color: #333;
+      box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
+			0 10px 10px rgba(0,0,0,0.22);
+    }
+
+    .bloque-texto h2 {
+      margin-top: 0;
+      color: #007BFF;
+    }
+    .bloque-interactivo {
+        width: 80%;
+        margin: 20px auto;
+        padding: 20px;
+        background: -webkit-linear-gradient(to right, #97df75, #066b30);
+        background: linear-gradient(to right, #2e4620, #0b9c48);
+        border: 1px solid #ddd;
+        border-radius: 10px;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+        font-family: Arial, sans-serif;
+        line-height: 1.6;
+        color: #e0d6d6;
+        transition: background-color 0.3s, transform 0.3s;
+        
+    }
+
+    .bloque-interactivo:hover {
+        background-color: rgb(243, 243, 255);
+        transform: scale(1.05);
+    }
+
+    .bloque-interactivo h2 {
+        margin-top: 0;
+        color: #212724;
+        cursor: pointer;
+        
+    }
+    
