--- a/static/css/styles1.css
+++ b/static/css/styles1.css
@@ -6,14 +6,16 @@
 }
 
 body {
-	background: #f6f5f7;
+	background: #a5ddbb;
+	background: -webkit-linear-gradient(to right, #97df75, #066b30);
+	background: linear-gradient(to right, #dcecd2, #0b9c48);
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
 	font-family: 'Montserrat', sans-serif;
 	height: 100vh;
-	margin: -20px 0 50px;
+	margin: 100px 0 100px;
 }
 
 h1 {
@@ -225,5 +227,26 @@ input {
 	height: 40px;
 	width: 40px;
 }
+.bloque-texto {
+	width: 75%;
+	margin: 20px;
+	padding: 20px;
+	background: #0a853d;
+	background: -webkit-linear-gradient(to right, #29c49d, #4be923);
+	background: linear-gradient(to right, #5ec0b0, #59f311);
+	border: 1px solid #2a5a03;
+	border-radius: 50px;
+	box-shadow: 2px 2px 5px rgba(189, 27, 27, 0.1);
+	font-family: Arial, sans-serif;
+	line-height: 1.6;
+	color: #333;
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
+		  0 10px 10px rgba(0,0,0,0.22);
+  }
+
+  .bloque-texto h2 {
+	margin-top: 10%;
+	color: #6a84a0;
+  }
 
 
