--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %}
-{% block title %}Editar{% endblock %}
+{% extends "admin/baseadm.html" %}
+{% block title %}administrar{% endblock %}
 {% block content %}
  
     
