--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,17 +3,14 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 body {
     font-family: Arial, sans-serif;
-    line-height: 1;
-    background: #a5ddbb;
 	background: -webkit-linear-gradient(to right, #97df75, #066b30);
 	background: linear-gradient(to right, #dcecd2, #0b9c48);
     margin: 0; 
-    padding: 0; 
-    min-height: 80vh; /* Asegura que el body ocupe toda la altura del viewport */ 
+    min-height: 100vh; /* Asegura que el body ocupe toda la altura del viewport */ 
     display: flex; 
     flex-direction: column; 
     position: relative;
-    padding-bottom: 3em;
+    
 }
 
 
@@ -23,45 +20,40 @@ header {
 	background: -webkit-linear-gradient(to right, #184901, #57e752);
 	background: linear-gradient(to right, #42db63, #8cb19b);
     color: #f5f5f5;
-    padding: 10px;
+    padding: 1em;
     text-align:justify ;
 }
-header h1 {
+h1 {
+    text-align: center;
     margin: 0;
 }
 /* Secciones principales */
 main {
     width:100%;
-    max-width:"400px";
-    max-height:"1000px";
-    padding: 0rem;
-    background: #ffffff00; /* Verde claro */
-    min-height: 81vh;
-}
-section {
-    margin-bottom: 2rem;
+    padding: 1em 0;
+    padding-bottom: 4em;
 }
 
 h2, h3 {
-    color: #f7f7f7; /* Verde oscuro */
+    color: #080101;
 }
 
 /* Botones */
 .btn {
     display: inline-block;
     padding: 0.5rem 1rem;
-    background: #2e7d32; /* Verde oscuro */
+    background: #2e7d32;
     color: #fff;
     text-decoration: none;
     border-radius: 10px;
-    box-shadow: 0 4px 6px rgb(68, 175, 91); /* Sombra */
+    box-shadow: 0 4px 6px rgb(68, 175, 91);
     transition: box-shadow 0.3s ease;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .btn:hover {
-    background: #388e3c; /* Verde medio */
-    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2); /* Sombra más pronunciada al pasar el ratón */
+    background: #388e3c;
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2); 
 }
 
 /* Pie de página */
@@ -70,7 +62,7 @@ footer {
     color: #fff;
     text-align: center;
     position: absolute;
-    padding: 1em 0; 
+    padding: 0.2em 0; 
     bottom: 0;
     width: 100%;
     
@@ -86,7 +78,7 @@ select {
 
 label {
     font-size: 1.4rem;
-    font-family: 'Montserrat', Times, serif;
+    font-family: 'Montserrat', Times, bold;
     color: #000300; /* Verde oscuro */
     margin-right: 10px;
 }
@@ -95,16 +87,13 @@ label {
             display: flex;
             justify-content: center;
             align-items: center;
-            /*background-color: #3c7e2c;*/
             padding: 1rem;
             height: 5px;
-
         }
         .navbarit {
             display: flex;
             justify-content: right;
             align-items: center;
-            /*background-color: #3c7e2c;*/
             padding: 1rem;
             height: 5px;
         }
@@ -185,7 +174,7 @@ nav ul li a {
         }
         
     .bloque-texto {
-      width: 80%;
+      width: 90%;
       margin: 20px auto;
       padding: 20px;
       background: #0a853d;
@@ -206,7 +195,7 @@ nav ul li a {
       color: #007BFF;
     }
     .bloque-interactivo {
-        width: 80%;
+        width: 90%;
         margin: 20px auto;
         padding: 20px;
         background: -webkit-linear-gradient(to right, #97df75, #066b30);
@@ -218,6 +207,7 @@ nav ul li a {
         line-height: 1.6;
         color: #e0d6d6;
         transition: background-color 0.3s, transform 0.3s;
+        padding-bottom: 3em;
         
     }
 
