--- a/templates/admin/baseadm.html
+++ b/templates/admin/baseadm.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>{% block title %}plataforma{% endblock %}</title>
+    <title>{% block title %}plataformaadm{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
@@ -15,14 +15,18 @@
               </li>
                   <center><div class="navbar">
                     <ul>
-                      <li>
-                        <a class="nav-link" aria-current="page" href="/ret">inicio</a>
-                      </li>
+                      
                       <li class="nav-item">
                         <a class="nav-link" href="/cursos">cursos</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="/datos">progreso</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">agregar docente</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">agregar materia</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#">seguimiento</a>
