--- a/templates/docentes/basedoc.html
+++ b/templates/docentes/basedoc.html
@@ -16,7 +16,7 @@
                   <center><div class="navbar">
                     <ul>
                       <li class="nav-item">
-                        <a class="nav-link" href="/admin/datos">lista de usuarios</a>
+                        <a class="nav-link" href="/admin/datos">cursos</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="/admin/registroadm">agregar docente</a>
@@ -36,7 +36,7 @@
         {% block content %}{% endblock %}
     </main>
     <footer>
-        <center><p>&copy; 2024 apartado de administradores. Todos los derechos reservados.</p></center>
+        <center><p>&copy; 2024 apartado docentes. Todos los derechos reservados.</p></center>
     </footer>
 </body>
 </html>
