--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,12 +3,11 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 body {
     font-family: Arial, sans-serif;
-	background: -webkit-linear-gradient(to right, #97df75, #066b30);
-	background: linear-gradient(to right, #dcecd2, #0b9c48);
+	background-image: url('/static/images/fondo3.jpg'); /* Ruta a la imagen de fondo */ 
+	background-size: cover; /* Hace que la imagen cubra todo el fondo */ 
+	background-repeat: no-repeat;
     margin: 0; 
     min-height: 100vh; /* Asegura que el body ocupe toda la altura del viewport */ 
-    display: flex; 
-    flex-direction: column; 
     position: relative;
     
 }
@@ -178,8 +177,8 @@ nav ul li a {
       margin: 20px auto;
       padding: 20px;
       background: #0a853d;
-	  background: -webkit-linear-gradient(to right, #29c49d, #4be923);
-	  background: linear-gradient(to right, #5ec0b0, #59f311);
+	  background: -webkit-linear-gradient(to right, #377432, #67925c);
+	  background: linear-gradient(to right, #8fbd53, #2f8b04);
       border: 1px solid #2a5a03;
       border-radius: 50px;
       box-shadow: 2px 2px 5px rgba(189, 27, 27, 0.1);
@@ -192,15 +191,15 @@ nav ul li a {
 
     .bloque-texto h2 {
       margin-top: 0;
-      color: #007BFF;
+      color: #022902;
     }
     .bloque-interactivo {
-        width: 90%;
+        width: 80%;
         margin: 20px auto;
         padding: 20px;
-        background: -webkit-linear-gradient(to right, #97df75, #066b30);
-        background: linear-gradient(to right, #2e4620, #0b9c48);
-        border: 1px solid #ddd;
+        background: linear-gradient(to left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1)), url('/static/images/fondo4.png') no-repeat right; 
+        background-size:cover;
+        border: 2px solid #0f0e0e;
         border-radius: 10px;
         box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
         font-family: Arial, sans-serif;
@@ -222,4 +221,98 @@ nav ul li a {
         cursor: pointer;
         
     }
+    .popup-fondo {
+        display: none; /* Ocultar por defecto */
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
+        justify-content: center;
+        align-items: center;
+    }
+    
+    /* Estilos para el contenido del popup */
+    .popup-contenido {
+        background-color: white;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+        width: 80%;
+        max-width: 500px;
+        text-align: center;
+    }
+    
+    /* Estilos para el botón de cerrar */
+    .cerrar-btn {
+        background-color: #288a0f;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        cursor: pointer;
+        margin-top: 20px;
+    }
+    .bloque2 {
+        width: 30%;
+        display: inline-block;
+        vertical-align: top; /* Alinea los bloques en la parte superior */
+        margin-left: 10px;
+        margin-right: 10px; 
+    }
+    .bloque1 {
+        width: 65%;
+        display: inline-block;
+        vertical-align: top; /* Alinea los bloques en la parte superior */
+        margin-right: 10px; 
+        margin-left: 15px; /* Espacio entre los bloques */
+        align-content: end;
+    }
+    
+    .docente-container {
+        background-color: #fff;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        display: flex;
+        padding: 20px;
+        max-width: 800px;
+        width: 100%;
+    }
+    
+    .docente-img {
+        border-radius: 50%;
+        height: 150px;
+        width: 150px;
+        object-fit: cover;
+        margin-right: 20px;
+    }
+    
+    .docente-info {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+    .docente-nombre {
+        color: #333;
+        margin: 0 0 10px;
+        font-size: 24px;
+    }
+    
+    .docente-departamento,
+    .docente-email,
+    .docente-telefono {
+        color: #777;
+        margin: 0 0 10px;
+        font-size: 16px;
+    }
+    
+    .docente-biografia {
+        color: #555;
+        margin: 0;
+        font-size: 14px;
+        line-height: 1.5;
+    }
+    
     
