--- a/templates/base.html
+++ b/templates/base.html
@@ -19,13 +19,10 @@
                         <a class="nav-link" aria-current="page" href="/ret">inicio</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="/cursos">cursos</a>
+                        <a class="nav-link" href="/prog">progreso</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="/datos">progreso</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">seguimiento</a>
+                        <a class="nav-link" href="/cur">pagos</a>
                       </li>
                     </ul>
 
@@ -39,7 +36,7 @@
         {% block content %}{% endblock %}
     </main>
     <footer>
-        <center><p>&copy; 2024 examen 2 parcial TEM-742. Todos los derechos reservados.</p></center>
+        <center><p>&copy; 2024 EduVerse Co. Todos los derechos reservados.</p></center>
     </footer>
 </body>
 </html>
