--- a/templates/admin/datos.html
+++ b/templates/admin/datos.html
@@ -29,6 +29,7 @@
             <th>carnet</th>
             <th>Nombre</th>
             <th>Apellido</th>
+            <th>Titulo</th>
             <th>Usuario</th>
             <th>Accion</th>
         </tr>
@@ -48,9 +49,10 @@
     <h1>Datos de curso</h1>
     <table class="table-container">
         <tr>
-            <th>carnet</th>
+            <th>Codigo</th>
             <th>Nombre</th>
-            <th>Apellido</th>
+            <th>Detalle</th>
+            <th>Docente</th>
             <th>Accion</th>
         </tr>
         {% for cur in curs %}
@@ -71,6 +73,7 @@
             <th>carnet</th>
             <th>Nombre</th>
             <th>Usuario</th>
+            <th>Accion</th>
             
         </tr>
         {% for usuario in adm %}
