--- a/templates/confirmacion.html
+++ b/templates/confirmacion.html
@@ -9,9 +9,9 @@
 <body>
     <div class="bloque-texto">
         <form action="/login">
-            <center><h1>¡Bienvenidos a [Nombre de la Plataforma]!</h1>
+            <center><h1>¡Bienvenidos a EduVerse!!</h1>
               Estamos emocionados de tenerte aquí en nuestra comunidad de aprendizaje en línea. <br><br>
-              En [Nombre de la Plataforma], creemos que la educación es la clave para desbloquear nuevas oportunidades y alcanzar tus metas personales y profesionales. <br>
+              En EduVerse!, creemos que la educación es la clave para desbloquear nuevas oportunidades y alcanzar tus metas personales y profesionales. <br>
             Ya puedes ingresar ¡Bienvenido!
            <br><br>
 
