--- a/templates/progreso.html
+++ b/templates/progreso.html
@@ -8,7 +8,7 @@
             <th>id</th>
             <th>codigo de la materia</th>
             <th>carnet</th>
-            <th>Detalle</th>
+            <th>Usuario</th>
             
         </tr>
         {% for usuario in daprog %}
